--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-t
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           "Millennial"
-description:	       "a minimalist Jekyll theme for running a blog or publication"
-author:              "Paul Le"
+description:	       "Croissant à la Truffle"
+author:              "Truffle"
 
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
